--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3",
-    "typescript": "~4.3.4",
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8"
   },
@@ -49,7 +48,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.4"
+    "typescript": "^4.0.0-dev.20200711"
   },
   "engines": {
     "node": "14.17.1",
